crates/connectors/ndc-cockroach/tests/snapshots/query_tests__aggregation__aggregate_count_albums_plus_field.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "aggregates": {
      "avg_artist_id": 121.94236311239193,
      "how_many_albums": 347,
      "how_many_artist_ids": 347,
      "how_many_distinct_artist_ids": 204,
      "max_artist_id": 275,
      "min_artist_id": 1
    },
    "rows": [
      {
        "Title": "Let There Be Rock"
      },
      {
        "Title": "Big Ones"
      },
      {
        "Title": "Jagged Little Pill"
      },
      {
        "Title": "Facelift"
      },
      {
        "Title": "Warner 25 Anos"
      }
    ]
  }
]
